--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                         </div>
                         <div class="nav">
                             <ul>
-                                <li><a href="#">Nos Services</a></li>
+                                <li><a href="./index.html">Nos Services</a></li>
                             
-                                <li><a href="#">Notre Equipe</a></li>
+                                <li><a href="./equipe.html">Notre Equipe</a></li>
                                 <li><a href="#">Notre Portofolio</a></li>
-                                <li><a href="#">Nous contacter</a></li>
+                                <li><a href="./contact.html">Nous contacter</a></li>
                             </ul>
             
                         </div>
